[package]
name = "finance_portfolio"
version = "0.1.0"
authors = ["PrettyGoodCapital <prettygoodcapital@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/prettygoodcapital/finance portfolio"
description = "Standard financial portfolio tools"

[lib]
name = "finance_portfolio"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]

[profile.test.junit]
path = "junit.xml"

